fix boxes in a line, aligned text under boxes

--- a/style.css
+++ b/style.css
@@ -90,16 +90,30 @@ ul, a {
     flex-direction: column;
 }
 
+.information .container {
+    padding-bottom: 100px;
+    height: 300px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+    flex-basis: 100%;
+}
+
 .information .container .img-box {
     width: 50px;
     height: 50px;
-    border: 1px #3882F6;
     background-color: #1F2937;
     padding: 50px;
     margin: 20px;
     border-radius: 20px;
 }
 
-.information .container {
-    padding-bottom: 100px;
+.information .container .info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 150px;
+    text-align: center;
+    flex-direction: column;
 }
